--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
   </ul>
   </div>
   <div class="content">
-        <div class="titles">
- Rooster</div>
+        <div class="title">
+ David's site</div>
   <p>
-  Hier vind je je rooster typ je leerlingnummer/docentenafkorting</p>
-  <iframe id="rooster" src="https://rooster.hetmml.nl/" width="100%" height="500px;" >
-
-  </iframe>
+  Op deze site zet ik dingen die handig zijn voor het metis.</p>
   </div>
   </body>
