--- a/over.html
+++ b/over.html
@@ -16,7 +16,7 @@
       <label for="active" class="close"></label>
       <div class="wrapper">
         <ul>
-  <li><a href="ptf.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="over.html">Over</a></li>
   <li><a href="links.html">Links</a></li>
   <li><a href="roosters.html">rooster</a></li>
@@ -24,9 +24,41 @@
   </ul>
   </div>
   <div class="content">
-        <div class="title">
- David's site</div>
-  <p>
-  Op deze site zet ik dingen die handig zijn voor het metis.</p>
+        <div class="titul">
+ Over David's site</div>
+  Hier zie je een tabel van sites en bepaalde factoren<p>
+</p>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-dvpl">Site naam</th>
+    <th class="tg-0pky">Hoe handig</th>
+    <th class="tg-0pky">Hoeveel liefde in site gestoken</th>
+    <th class="tg-0pky">Hoe populair</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0pky">Davidksse.github.io</td>
+    <td class="tg-0pky">Heel handig</td>
+    <td class="tg-0pky">Heel veel</td>
+    <td class="tg-0pky">Niet populair</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Google.nl</td>
+    <td class="tg-0pky">Best handig</td>
+    <td class="tg-0pky">Geen liefde</td>
+    <td class="tg-0pky">Heel populair</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Youtube.com</td>
+    <td class="tg-0pky">Niet handig</td>
+    <td class="tg-0pky">Beetje liefde</td>
+    <td class="tg-0pky">Heel populair</td>
+  </tr>
+</tbody>
+</table>
+  <p class="locesion">Deze site is grootendeels gemaakt op het metis montesorri lyceum.</p>
+  <p>Voor feedback kan je naar de feedback pagina.</p>
   </div>
   </body>
