--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
     <label for="active" class="close"></label>
     <div class="wrapper">
       <ul>
-<li><a href="ptf.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="over.html">Over</a></li>
 <li><a href="links.html">Links</a></li>
 <li><a href="roosters.html">rooster</a></li>
