--- a/links.html
+++ b/links.html
@@ -36,7 +36,7 @@ Links</div>
 </a>
 
 <a href="https://planner.hetmml.nl/" style="text-decoration: none" target="_blank">
-<img border="0" alt="Metis planner" src="planner.png" width="100" height="100">
+<img border="0" alt="Metis planner" src="https://i.ibb.co/r51BTmr/Planner.png" width="100" height="100">
 </a>
 
 <a href="https://metis-montessori-lyceum.gitbook.io/startpagina/" style="text-decoration: none"   target="_blank">
