--- a/feedback.html
+++ b/feedback.html
@@ -14,7 +14,7 @@
 <li><a href="index.html">Home</a></li>
 <li><a href="over.html">Over</a></li>
 <li><a href="links.html">Links</a></li>
-<li><a href="roosters.html">rooster</a></li>
+<li><a href="roosters.html">Rooster</a></li>
 <li><a href="feedback.html">Feedback</a></li>
 </ul>
 </div>
@@ -25,14 +25,14 @@
   <form id="formulier">
     <h1>Geef je feedback</h1>
     <div class="id">
-      <input type="text" placeholder="Full name">
+      <input type="text" placeholder="Naam">
       <i class="far fa-user"></i>
     </div>
     <div class="id">
       <input type="email" placeholder="Email adress">
       <i class="far fa-envelope"></i>
     </div>
-    <textarea rows="8" cols="15" placeholder="Enter your opinions here.."></textarea>
+    <textarea rows="8" cols="15" placeholder="Geef je opinie hier.."></textarea>
     <button type="button" name="button">verstuur</button>
   </form
 </div>
