--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <li><a href="index.html">Home</a></li>
   <li><a href="over.html">Over</a></li>
   <li><a href="links.html">Links</a></li>
-  <li><a href="roosters.html">rooster</a></li>
+  <li><a href="Roosters.html">Rooster</a></li>
   <li><a href="feedback.html">Feedback</a></li>
   </ul>
   </div>
@@ -28,5 +28,18 @@
  David's site</div>
   <p>
   Op deze site zet ik dingen die handig zijn voor het metis.</p>
+  <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+  </script>
+  <script>
+      < !--jQuery code to show the working of hover() method-- >
+          $(document).ready(function () {
+              $("p").hover(function () {
+                  $(this).css("background-color", "green");
+              }, function () {
+                  $(this).css("background-color", "yellow");
+              });
+          });
+  </script>
   </div>
   </body>
