--- a/links.html
+++ b/links.html
@@ -14,7 +14,7 @@
 <li><a href="index.html">Home</a></li>
 <li><a href="over.html">Over</a></li>
 <li><a href="links.html">Links</a></li>
-<li><a href="Roosters.html">Rooster</a></li>
+<li><a href="roosters.html">Rooster</a></li>
 <li><a href="feedback.html">Feedback</a></li>
 </ul>
 </div>
